--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>prisoners.dilemma.practicum</groupId>
-    <artifactId>computing.dcu.ie</artifactId>
+    <groupId>com.dcu.ie</groupId>
+    <artifactId>prisoner.dilemma.view</artifactId>
     <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+    </properties>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -22,8 +35,9 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.dcu.ie.Main</mainClass>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.dcu.ie.prisoner.dilemma.view.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
